compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__double_assignment_in_bit_array.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 3121
expression: let assert <<a as b>> = <<>>
snapshot_kind: text
---
----- SOURCE CODE
let assert <<a as b>> = <<>>

----- ERROR
error: Double variable assignment
  ┌─ /src/one/two.gleam:1:19
  │
1 │ let assert <<a as b>> = <<>>
  │                   ^

This pattern assigns to two different variables at once, which is not
possible in bit arrays.
Hint: Remove the `as` assignment.
