compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_anon_function_arguments.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2103
expression: "\nfn(x, x) {\n  Nil\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn(x, x) {
  Nil
}


----- ERROR
error: Argument name already used
  ┌─ /src/one/two.gleam:2:7
  │
2 │ fn(x, x) {
  │       ^

Two `x` arguments have been defined for this function.
