compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_const_and_function_names_const_fn.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1130
expression: "const duplicate = 1\nfn duplicate() { 2 }"
snapshot_kind: text
---
----- SOURCE CODE
const duplicate = 1
fn duplicate() { 2 }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:1
  │
1 │ const duplicate = 1
  │ --------------- First defined here
2 │ fn duplicate() { 2 }
  │ ^^^^^^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
