compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_const_names.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1120
expression: "const duplicate = 1\npub const duplicate = 1"
snapshot_kind: text
---
----- SOURCE CODE
const duplicate = 1
pub const duplicate = 1

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:1
  │
1 │ const duplicate = 1
  │ --------------- First defined here
2 │ pub const duplicate = 1
  │ ^^^^^^^^^^^^^^^^^^^ Redefined here

`duplicate` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
