compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_constructors2.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 1093
expression: "type Boxy { Box(Int) }\ntype Box { Box(x: Int) }"
snapshot_kind: text
---
----- SOURCE CODE
type Boxy { Box(Int) }
type Box { Box(x: Int) }

----- ERROR
error: Duplicate definition
  ┌─ /src/one/two.gleam:2:12
  │
1 │ type Boxy { Box(Int) }
  │             -------- First defined here
2 │ type Box { Box(x: Int) }
  │            ^^^^^^^^^^^ Redefined here

`Box` has been defined multiple times.
Names in a Gleam module must be unique so one will need to be renamed.
