compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__duplicate_fields_in_record_update_reports_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2593
expression: "\npub type Wibble { Wibble(thing: Int, other: Int) }\n\npub fn main() {\n  let wibble = Wibble(1, 2)\n  let wobble = Wibble(..wibble, thing: 1, thing: 2)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type Wibble { Wibble(thing: Int, other: Int) }

pub fn main() {
  let wibble = Wibble(1, 2)
  let wobble = Wibble(..wibble, thing: 1, thing: 2)
}


----- ERROR
error: Duplicate argument
  ┌─ /src/one/two.gleam:6:43
  │
6 │   let wobble = Wibble(..wibble, thing: 1, thing: 2)
  │                                           ^^^^^^^^

The labelled argument `thing` has already been supplied.
